--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p I have never broken a bone but I have bruised one badly 
+  p #{title} I have never broken a bone but I have bruised one badly 
